fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ nav {
 main {
     margin-top: 10vh;
     height: 90vh;
+    width: 100vw;
     background: var(--light);
 
 }
@@ -113,7 +114,7 @@ main {
 
     .nav-list {
         position: absolute;
-        top: 8vh;
+        top: 10vh;
         right: 0;
         width: 60vw;
         gap: 50px;
